# cis

./: docker-compose.yml
.github/workflows/: make-test.yml
docker/scripts/: debug-install.sh  run.sh
python-modules/cis_aws/: pyproject.toml
python-modules/cis_change_service/: pyproject.toml
python-modules/cis_change_service/cis_change_service/: idp.py
python-modules/cis_crypto/: pyproject.toml
python-modules/cis_crypto/cis_crypto/: cli.py
python-modules/cis_identity_vault/: pyproject.toml
python-modules/cis_identity_vault/cis_identity_vault/: parallel_dynamo.py
python-modules/cis_identity_vault/cis_identity_vault/models/: user.py
python-modules/cis_identity_vault/tests/: test_models_user_next_page.py
python-modules/cis_logger/: pyproject.toml
python-modules/cis_notifications/: pyproject.toml
python-modules/cis_postgresql/: pyproject.toml
python-modules/cis_processor/: pyproject.toml
python-modules/cis_processor/tests/: test_operation.py  test_profile_delegate.py
python-modules/cis_profile/: pyproject.toml
python-modules/cis_profile/cis_profile/: fake_profile.py
python-modules/cis_profile_retrieval_service/: pyproject.toml
python-modules/cis_profile_retrieval_service/cis_profile_retrieval_service/: idp.py  v2_api.py
python-modules/cis_publisher/: pyproject.toml
python-modules/cis_publisher/tests/: test_ldap.py  test_publisher.py
serverless-functions/auth0_publisher/: pyproject.toml
serverless-functions/change/: pyproject.toml
serverless-functions/hris_publisher/: pyproject.toml
serverless-functions/identity_vault_curator/: pyproject.toml
serverless-functions/ldap_publisher/: pyproject.toml
serverless-functions/mozilliansorg_groups_publisher/: pyproject.toml
serverless-functions/postgres_access_layer/: pyproject.toml
serverless-functions/postgresql_replicator/: pyproject.toml
serverless-functions/profile_retrieval/: Dockerfile  pyproject.toml
serverless-functions/webhook_notifier/: pyproject.toml
