[project]
name = "change"
version = "0.0.1"
authors = [
    {name = "Andrew Krug",email = "akrug@mozilla.com"},
    {name = "Bheesham Persaud",email = "bhee@mozilla.com"},
    {name = "Jake Watkins",email = "jwatkins@mozilla.com"}
]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aws-xray-sdk (>=2.14.0,<3.0.0)",
    "serverless-wsgi (>=3.0.5,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
cis_change_service = { path = "../../python-modules/cis_change_service" }
cis_logger = { path = "../../python-modules/cis_logger" }
